# poexcel

./: 0.0.14  README.md  setup.cfg
contributors/wyl219/: page_setup.py
contributors/wyl219/excel_files/: page_setup.xlsx
demo/: 1、query4excel_demo.py  count4page.py  merge2sheet.py  split_excel_by_column.py
dev/: data.xlsx  e2pdf.py  excel4page.py  fake2excel.xlsx  j2e.py  jsfile.json  test.py
dev/create_excel/: create_excel.py  test.xlsx
dev/create_excel/test/: test.xlsx
dev/merge4sheet/: copy_001.py  merge2sheet.xlsx  test.py
dev/merge4sheet/output_path/: merge2sheet.xlsx
dev/merge4sheet/test_files/: fake2excel-1.xlsx  fake2excel-2.xlsx
dev/str2dict/: test.py
dev/付费咨询/单元格合并/: main.py  示例.xlsx  结果.xlsx
dev/付费咨询/统计结果Excel/: main.py  origin.xlsx  output.xlsx  select_person.py  select_person_result.xlsx
poexcel/: __init__.py
poexcel/api/: excel.py
poexcel/core/: ExcelType.py  QueryExcel.py
poexcel/lib/excel/: SplitExcel.py
script/: allpackages.txt  clean.sh
tests/: __init__.py  fake2excel.xlsx  test_excel.py  运维工单信息.xlsx
tests/excel_files/: fake2excel-1.xlsx
tests/output_path/: gclqd.xls
