[metadata]
name = poexcel
version = 0.0.4
description = pip install poexcel
long_description = file: README.md
long_description_content_type = text/markdown
url = http://python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/poexcel/issues
    Documentation = https://github.com/CoderWanFeng/poexcel/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/poexcel

[options]
packages = find:
install_requires =
    pandas
    search4file
    faker
    alive_progress
    tqdm
    xlrd
    xlwt

python_requires = >=3.7
include_package_data = True
zip_safe = False

